--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
+.card{
+    display: flex;
+    flex-direction: row;
+    border-color: white;
+    margin-top: 50px;
+    gap:10px;
+    width: 90%;
+    margin-left: 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.highlight{
+    margin-left: 75px;
+    margin-bottom: 75px;
+ }
+ .container{
+   width: 43%;
+   margin-left: 3px;
+   margin-top: 30px;
+ }
+ .footerStyle{
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: rgb(25, 25, 55);
+  padding: 20px 40px;
   color: white;
+
+ }
+ 
+ .article{
+   background-color: #f8f9fa;
+   padding: 50px;
+   border-radius: 5px;
+   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  gap: 20px;
+  
+ }
+
+ .hero-image {
+  height: 500px;
+  
 }
 
-.App-link {
-  color: #61dafb;
+@media (max-width: 768px) {
+  .hero-image {
+    height: 500px;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
